tdf#108244: generate note caption always at the beginning of the export

Change-Id: I160f57cf43227e7a432536134da242a4b3053d4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189453
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Jenkins